first public commit

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -6,3 +6,14 @@
 	year    = {2020},
 	month   = {3}
 }
+
+@article{ssa2009,
+  title={The smoothed spectral abscissa for robust stability optimization},
+  author={Vanbiervliet, Joris and Vandereycken, Bart and Michiels, Wim and Vandewalle, Stefan and Diehl, Moritz},
+  journal={SIAM Journal on Optimization},
+  volume={20},
+  number={1},
+  pages={156--171},
+  year={2009},
+  publisher={SIAM}
+}
