--- a/docs/src/03_EI.md
+++ b/docs/src/03_EI.md
@@ -19,7 +19,7 @@ $f\left( \cdot \right)$ is a rectified-linear function.
 
 ## Initialization
 
-```@example 03_EI
+````@example 03_EI
 using Plots,NamedColors
 using LinearAlgebra,Statistics
 using Random
@@ -43,11 +43,11 @@ function run_rnn_dynamics(u0::Vector{R},W::Matrix{R},h::Vector{R},
   return solv.t,ret_u,ret_norms
 end;
 nothing #hide
-```
+````
 
 ## Build the starting weight matrix
 
-```@example 03_EI
+````@example 03_EI
 const sparseness = 0.5
 const ne = 35
 const ni = 15
@@ -58,36 +58,38 @@ for i in 1:ntot,j in 1:ntot
     Wmask[i,j]=0.
   end
 end
-heatmap(Wmask;ratio=1,color=:greys,axis=nothing,ticks=nothing,border=:none)
-```
+heatmap(Wmask;
+  ratio=1,seriescolor=:bwr,
+  clims=(-1,1),cbar=nothing,axis=nothing,ticks=nothing,border=:none)
+````
 
 The matrix `Wmask` shown above specifies the connectivy (presence of an edge, and sign)
 The initial matrix is defined as follows:
 
-```@example 03_EI
+````@example 03_EI
 W0 = 2.0 .* rand(ntot,ntot) .* Wmask;
 nothing #hide
-```
+````
 
 Even with the leaky term, the dynamics is quite unstable,
 due to the presence of excitatory closed loops, and not enough inhibition.
 
-```@example 03_EI
+````@example 03_EI
 u0 = 3.0.*randn(ntot)
 h = 0.1 .* rand(ntot)
 times,dyn_t,dyn_norms = run_rnn_dynamics(u0,W0,h,10.0,0.05)
 plot(times,dyn_norms;
   leg=false,linewidth=3,color=:black,xlabel="time",ylabel="norm(x(t))",
   yscale=:log10,label="before optimization")
-```
+````
 
 Note that the y-scale is exponential here. The system is highly unstable.
 
 ## Objective function that excludes diagonal
 
-```@example 03_EI
+````@example 03_EI
 using Optim
-```
+````
 
 To keep the signs of $W_{i,j}$ I make a reparametrization as follows.
 ```math
@@ -96,7 +98,7 @@ W_{i,j} = s_j \; \exp\left(\beta_{i,j}\right)
 I then need to propagate the gradient of the SSA. I will also inclide a
 2-norm regularizer on the weights
 
-```@example 03_EI
+````@example 03_EI
 function objective_and_grad_constraints(x::Vector{R},grad::Union{Nothing,Vector{R}},
     n::Integer,ssa_eps::R,alloc::SSA.SSAAlloc,W0::Matrix{R}) where R
   betas=reshape(x,(n,n))
@@ -112,12 +114,12 @@ function objective_and_grad_constraints(x::Vector{R},grad::Union{Nothing,Vector{
   return obj
 end;
 nothing #hide
-```
+````
 
 ## Optimizer and optimization
 
-```@example 03_EI
-const ssa_eps=0.005
+````@example 03_EI
+const ssa_eps=0.001
 const alloc = SSA.SSAAlloc(ntot)
 const y0 = map(w-> w!=0. ? log(abs(w)) : 0. ,W0[:])
 
@@ -135,26 +137,32 @@ opt_out = optimize(Optim.only_fg!(objfun!),y0,BFGS(),Optim.Options(iterations=1_
 y_opt=Optim.minimizer(opt_out)
 W_opt = Wmask .* exp.(reshape(y_opt,(ntot,ntot))); # convert from beta to weight
 nothing #hide
-```
+````
 
-Comparison between inital matrix and the optimized verion. Note the E/I separation.
+Comparison between inital matrix and the optimized version. Note the E/I separation.
 
-```@example 03_EI
-heatmap(hcat(W0,fill(NaN,ntot,10),W_opt);ratio=1,axis=nothing,ticks=nothing,border=:none)
-```
+````@example 03_EI
+_ = let wboth = hcat(W0,fill(NaN,ntot,10),W_opt)
+  _wex = extrema(W_opt)
+  _zero_rel =abs(_wex[1])/(_wex[2]-_wex[1])
+  _cgrad = cgrad([:blue,:white,:red],[0, _zero_rel ,1.])
+  heatmap(wboth;ratio=1,seriescolor=_cgrad,clim=_wex,
+    axis=nothing,ticks=nothing,border=:none)
+end
+````
 
 Now, as before I consider the norm...
 
-```@example 03_EI
-times,dyn_t_opt,dyn_norms_opt = run_rnn_dynamics(u0,W_opt,h,30.0,0.05)
+````@example 03_EI
+times,dyn_t_opt,dyn_norms_opt = run_rnn_dynamics(u0,W_opt,h,40.0,0.05)
 plot(times,dyn_norms_opt;
-      leg=:topright,linewidth=3,color=[:blue],
+      leg=:topright,linewidth=3,color=:blue,
       xlabel="time",ylabel="norm(x(t))", label="after optimization")
-```
+````
 
 STABLE !
 
-There seems to be a large initial amplificaiton, but the activity settles to low values.
+There seems to be a large initial amplificaiton, but the activity settles to a stable point.
 
 ## Extras
 
@@ -162,7 +170,7 @@ In gradient based optimization with no automatic differentiation, it is
 always necessary to test the gradient of the objective function.
 The procedure is illustrated below.
 
-```@example 03_EI
+````@example 03_EI
 using Calculus
 function test_gradient(myobjfun,y0)
   grad_an = similar(y0)
@@ -174,16 +182,16 @@ function test_gradient(myobjfun,y0)
    end end
   return (grad_an,grad_num)
 end
-```
+````
 
 To enable testing, set `do_the_test=true`
 It is advised to reduce the size of the system.
 
-```@example 03_EI
+````@example 03_EI
 (x1,x2)=test_gradient(objfun!,randn(ntot^2))
 scatter(x1,x2;ratio=1)
 plot!(identity)
-```
+````
 
 ---
 
